# zensar-trg-sources

./: .env.example  .gitignore  requirements.prod.txt  requirements.txt
0-lc-basics/: 0-lc-demo.ipynb  1-lc-demo.ipynb  10-lc-demo.ipynb  11-lc-demo.ipynb  2-lc-demo.ipynb  3-lc-demo.ipynb  4-lc-demo.ipynb  4.1-lc-demo.ipynb  5-lc-demo.ipynb  6-lc-demo.ipynb  7-lc-demo.ipynb  8-lc-demo.ipynb  9-lc-demo.ipynb
1-agents/: 1-sql-agents.ipynb  csv-agents.py
2-rag/: 0-data-ingestion.py  1-test-retrieval.py  3-ui.py
3-lg/: requirements.prod.txt  simple-lg-demo.py
4-advanced-rag/: agentic-rag.ipynb  self-rag.ipynb
6-advanced/: agentic-self-reflective-rag.ipynb
end-to-end/: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER_README.md  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  setup.py  start_server.py  urls.txt
end-to-end/api/: main.py
end-to-end/chats/: chat-instructions.md
end-to-end/monitoring/: prometheus.yml
end-to-end/tests/: agentic-rag-test.py  diagnostic.py  (+1 more)
lc-training-data/: README.md  good.txt
mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  run_mcp_server.py
mcp/archives/: products_library.py
mcp/data/: product-titles.txt
mcp/product_management/: __init__.py  config.py  database.py  models.py  products_library.py
mcp/scripts/: generate_product_pdfs.py  load_data.py
mcp/tests/: test_all_functionalities.py
references/: mcp-notes.md
voicechatbot/: app.py  chatbot_function.py  requirements.txt
(+65 files in other folders)
